--- a/index.html
+++ b/index.html
@@ -6,31 +6,91 @@
     <title>Coming Soon</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
+            background-color: #f4f4f4;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
         }
-        .content {
+        .container {
             text-align: center;
         }
         h1 {
             color: #333;
+            font-size: 3em;
+            margin-bottom: 10px;
         }
         p {
             color: #666;
-            margin-top: 20px;
+            font-size: 1.2em;
+            margin-top: 10px;
+            margin-bottom: 30px;
+        }
+        .countdown {
+            color: #333;
+            font-size: 1.5em;
+        }
+        .social-icons {
+            margin-top: 30px;
+        }
+        .social-icons a {
+            color: #333;
+            font-size: 1.5em;
+            margin: 0 10px;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .social-icons a:hover {
+            color: #007bff;
         }
     </style>
 </head>
 <body>
-    <div class="content">
+    <div class="container">
         <h1>Coming Soon</h1>
         <p>We're working hard to bring you something awesome. Stay tuned!</p>
+        <div class="countdown">
+            <p id="countdown"></p>
+        </div>
+        <div class="social-icons">
+            <a href="#" target="_blank">Facebook</a>
+            <a href="#" target="_blank">Twitter</a>
+            <a href="#" target="_blank">Instagram</a>
+        </div>
     </div>
+
+    <script>
+        // Set the date we're counting down to
+        var countDownDate = new Date("Mar 31, 2024 00:00:00").getTime();
+
+        // Update the countdown every 1 second
+        var x = setInterval(function() {
+
+            // Get the current date and time
+            var now = new Date().getTime();
+
+            // Calculate the distance between now and the countdown date
+            var distance = countDownDate - now;
+
+            // Calculate days, hours, minutes, and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            // Output the countdown
+            document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
+            + minutes + "m " + seconds + "s ";
+
+            // If the countdown is over, display text
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("countdown").innerHTML = "EXPIRED";
+            }
+        }, 1000);
+    </script>
 </body>
 </html>
