--- a/index.html
+++ b/index.html
@@ -1,59 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Company Name</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff; /* White background */
-        }
-        .content {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 1.2em;
-            margin-top: 20px;
-            max-width: 400px;
-            text-align: center;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Coming Soon</title>
+  <style>
+    /* Center the content */
+    body, html {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #ffffff; /* Optional: Set a background color */
+    }
+
+    /* Style the container */
+    .container {
+      text-align: center;
+    }
+
+    /* Style the logo */
+    .logo {
+      width: 150px; /* Adjust size as needed */
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-    <div class="content">
-        <h1>Your Company Name</h1>
-        <p>Welcome to our website. More updates coming soon!</p>
-    </div>
-    <script>
-        const fontFamilies = [
-            'Arial, sans-serif',
-            'Times New Roman, Times, serif',
-            'Courier New, Courier, monospace',
-            'Georgia, serif',
-            'Verdana, Geneva, sans-serif',
-            'Tahoma, Geneva, sans-serif',
-            'Roboto, sans-serif',
-            'Open Sans, sans-serif',
-            'Lato, sans-serif',
-            'Montserrat, sans-serif'
-        ];
 
-        const companyName = document.querySelector('h1');
-        for (let i = 0; i < fontFamilies.length; i++) {
-            companyName.style.fontFamily = fontFamilies[i];
-            document.body.appendChild(companyName.cloneNode(true));
-        }
-    </script>
+<div class="container">
+  <!-- Greatbitz logo -->
+  <img src="https://raw.githubusercontent.com/rxd65410/greatbitz-welcome-page/main/Great.png" alt="Greatbitz Logo" class="logo">
+  
+  <!-- Your "Coming Soon" message -->
+  <h2>Coming Soon</h2>
+</div>
+
 </body>
 </html>
