--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     /* Style the logo */
     .logo {
-      width: 500px; /* Adjust size as needed */
+      width: 300px; /* Adjust size as needed */
       height: auto;
     }
   </style>
@@ -31,10 +31,11 @@
 
 <div class="container">
   <!-- Greatbitz logo -->
-  <img src="https://raw.githubusercontent.com/rxd65410/greatbitz-welcome-page/main/Great.png" alt="Greatbitz Logo" class="logo">
+  <img src="https://github.com/rxd65410/greatbitz-welcome-page/blob/main/crop-image.png" alt="Greatbitz Logo" class="logo">
   
   <!-- Your "Coming Soon" message -->
-  <h2>Coming Soon</h2>
+  <h1>Welcome to GreatBitz</h1>
+  <h2>Coming soon...</h2>
 </div>
 
 </body>
