--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     /* Style the logo */
     .logo {
-      width: 150px; /* Adjust size as needed */
+      width: auto; /* Adjust size as needed */
       height: auto;
     }
   </style>
