--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div class="container">
   <!-- Greatbitz logo -->
-  <img src="https://github.com/rxd65410/greatbitz-welcome-page/blob/main/Great.png" alt="Greatbitz Logo" class="logo">
+  <img src="https://raw.githubusercontent.com/rxd65410/greatbitz-welcome-page/main/Great.png" alt="Greatbitz Logo" class="logo">
   
   <!-- Your "Coming Soon" message -->
   <h1>Welcome to GreatBitz</h1>
